--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,19 +1,12 @@
-@use "@fontsource/inter/scss/mixins" as Inter;
-@use "@fontsource/poppins/scss/mixins" as Poppins;
+@use "@fontsource-variable/cabin/scss/mixins" as Cabin;
 
 $weights: $font-weight-light, $font-weight-normal, $font-weight-semibold, $font-weight-bold;
 $subsets: (latin, latin-ext);
-$font-path: "./plugins/nodebb-theme-harmony" !default;
+$font-path: "./plugins/nodebb-theme-talksimlish" !default;
 
 @include Inter.faces(
 	$weights: $weights,
 	$subsets: $subsets,
 	$display: fallback,
-	$directory: "#{$font-path}/inter"
-);
-@include Poppins.faces(
-	$weights: $weights,
-	$subsets: $subsets,
-	$display: fallback,
-	$directory: "#{$font-path}/poppins"
+	$directory: "#{$font-path}/cabin"
 );
