--- a/scss/overrides.scss
+++ b/scss/overrides.scss
@@ -28,7 +28,7 @@ $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
 $beige: 	#f1f1e4 !default;
-$grey: 		##33363b !default;
+$grey: 		#33363b !default;
 
 $body-color: 		$grey !default;
 $body-bg: 		$beige !default;
