--- a/scss/overrides.scss
+++ b/scss/overrides.scss
@@ -34,7 +34,7 @@ $body-color: 		$grey !default;
 $body-bg: 		$beige !default;
 $body-tertiary-bg: 	$gray-200 !default;
 $text-muted: 		$gray-600 !default;
-$border-color: 		$grey !default;
+$border-color: 		$gray-200 !default;
 $link-color: 		#0951be !default;
 
 $form-check-input-border: var(--bs-border-width) solid $gray-500 !default;
